<resources>
    <string name="app_name">TickyToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">I know you’ve got many things to do but I’m here to help you organize</string>
    <string name="hey_i_m_ticky">Hey, I\'m Ticky!</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="add_some_tasks_don_t_make_me_bored">Add some tasks, don’t make me bored</string>
    <string name="back">Back</string>
    <string name="type_yout_task_here">Type yout task here</string>
    <string name="stuff_to_do">Stuff to do?</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Add Task</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="guest">Guest</string>
</resources>